# numerical_geometric_programming_lectures

./: .gitignore  README.md
cpp/cuda_summation/: CMakeLists.txt  README.md  main  main.cu
cpp/cuda_summation/docker/: Dockerfile  docker-build.sh  docker-run.sh
cpp/tbb_summation/: CMakeLists.txt  main.cpp
cpp/tbb_summation/docker/: Dockerfile  docker-build.sh  docker-run.sh
python/cpu_vs_gpu_matmul/: README.md  matmul_cpu_vs_gpu_pytorch.py  matmul_cpu_vs_gpu_tensorflow.py
python/five_SE3_pose_graph_optimization/: pose_graph_square_5nodes_no_rotation.py  pose_graph_square_5nodes_with_rotation_diverge.py
python/five_SE3_pose_graph_optimization_gtsam/: pose_graph_square_5nodes_using_gn_from_scratch.py  pose_graph_square_5nodes_using_gstam.py
python/icp_gauss_newton_from_scratch/: README.txt  config.py  dataset_generator.py  main_from_scratch_gauss_newton.py  main_icp.py  visualizer.py
python/icp_gauss_newton_from_scratch/figures/high_noise_with_prealignements_with_pruning/: config.txt~
python/icp_gauss_newton_from_scratch/figures/high_noise_with_prealignements_without_pruning/: config.txt~
python/lib/: pose.py  pose_module.py  test_oplus.py
python/pgo_numpy/: 1_baseline_gtsam_5nodes_rect.py  1_pgo_numpy_from_scratch_5nodes_rect.py  2_pgo_numpy_from_scratch_30nodes_circle.py  pgo_numpy_lib.py
python/single_SE3_pose_averaging/: main_onmanifold_ganussnewton.py  pose_lib.py
python/single_rotation_averaging/: README.md  main_naive.py  main_onmanifold_ganussnewton.py
python/two_SE3_pose_graph_optimization/: main.py  main_refactored.py
(+3 files in other folders)
